--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".HomeActivity">
 
-    <ImageView
-        android:id="@+id/iv_splash"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/gambar_splash"
-        android:adjustViewBounds="true"
-        android:scaleType="fitXY"
+        android:layout_height="wrap_content"
+        android:text="Halaman Home"
+        android:textSize="70dp"
+        android:layout_centerInParent="true"
+        android:gravity="center"
         />
 
 
