--- a/app/src/main/res/menu/menu_bawah.xml
+++ b/app/src/main/res/menu/menu_bawah.xml
@@ -9,7 +9,7 @@
 
     <item
         android:id="@+id/menu_crud"
-        android:icon="@drawable/ic_baseline_add_circle_outline_24"
+        android:icon="@drawable/add_36"
         android:title="Crud"
         />
 
