--- a/app/src/main/res/layout/fragment_crud.xml
+++ b/app/src/main/res/layout/fragment_crud.xml
@@ -3,14 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CrudFragment"
-    android:background="#FF5722">
+    tools:context=".CrudFragment">
 
+    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Halaman Crud"
-        android:textSize="50dp"
+        android:text="CRUD"
+        android:textSize="60dp"
+        android:textStyle="bold"
         android:gravity="center"
         />
 
