--- a/app/src/main/res/menu/menu_bawah.xml
+++ b/app/src/main/res/menu/menu_bawah.xml
@@ -3,19 +3,19 @@
 
     <item
         android:id="@+id/menu_home"
-        android:icon="@drawable/ic_baseline_home_24"
+        android:icon="@drawable/ic_home"
         android:title="Home"
         />
 
     <item
         android:id="@+id/menu_crud"
-        android:icon="@drawable/add_36"
+        android:icon="@drawable/ic_crud"
         android:title="Crud"
         />
 
     <item
         android:id="@+id/menu_about"
-        android:icon="@drawable/ic_baseline_account_box_24"
+        android:icon="@drawable/ic_about"
         android:title="About"
         />
 
